welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: not found: value False
var vuBiscuit = False
                ^Program:5: error: not found: value True
      vuBiscuit=True;  
                ^